fixes for product ms (from sonarqube)